--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ server.error.include-message=always
 spring.mvc.view.prefix=/templates
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mabdullayev770@gmail.com
-spring.mail.password=pevxekeictjdzcoq
+spring.mail.username=yours
+spring.mail.password=yours
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
